# lens_mind

./: .gitignore  AGENTS.md  INSTALL.md  pyproject.toml
src/lensmind/: __init__.py  __main__.py  app.py
src/lensmind/db/: __init__.py  models.py  repository.py
src/lensmind/services/: blur_analysis.py  duplicate_detection.py  embeddings.py  faiss_search.py  file_hashing.py  openclip_embeddings.py  perceptual_hashing.py  photo_discovery.py  photo_display.py  photo_import.py  photo_metadata.py  photo_ranking.py  search_evaluation.py  thumbnail_generation.py  trip_suggestions.py
src/lensmind/ui/: import_worker.py  shell.py  thumbnail_loader.py
tests/: test_app.py  test_blur_analysis.py  test_duplicate_detection.py  test_faiss_search.py  test_import_worker.py  test_models.py  test_openclip_embeddings.py  test_photo_discovery.py  test_photo_display.py  test_photo_import.py  test_photo_metadata.py  test_photo_ranking.py  test_repository.py  test_search_evaluation.py  test_shell.py  test_thumbnail_generation.py  test_trip_suggestions.py
