[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lensmind"
version = "0.1.0"
description = "Minimal desktop application foundation for LensMind."
requires-python = ">=3.11"
dependencies = [
    "Pillow>=10.4",
    "PySide6>=6.7",
    "SQLAlchemy>=2.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "pytest>=8.2",
    "ruff>=0.5",
]

[project.scripts]
lensmind = "lensmind.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/lensmind"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["lensmind"]
mypy_path = "src"
