[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lensmind"
version = "0.1.0"
description = "Minimal desktop application foundation for LensMind."
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.8",
    "numpy>=1.26,<2",
    "open_clip_torch>=3.3",
    "opencv-python-headless>=4.10",
    "Pillow>=10.4",
    "PySide6>=6.7",
    "SQLAlchemy>=2.0",
    "torch>=2.2",
    "torchvision>=0.17",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "pytest>=8.2",
    "ruff>=0.5",
]

[project.scripts]
lensmind = "lensmind.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/lensmind"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["lensmind"]
mypy_path = "src"

[tool.lensmind.embeddings]
model_name = "ViT-B-32"
pretrained = "laion2b_s34b_b79k"
batch_size = 8
device_policy = "mps_if_available_else_cpu"
